// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AG—Svelte (Beta)/Button Button Base 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn-base svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Button Blank 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-blank svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Button Overrides 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn my-custom-css-klass svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Button Type Reset 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn svelte-1rfnt3r"
    type="reset"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Button Type Submit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn svelte-1rfnt3r"
    type="submit"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Default Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Default Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Default Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-circle btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Default Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-raised svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Default Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn disabled svelte-1rfnt3r"
    disabled=""
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-large svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Block 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-block svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-circle svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded btn-raised svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Primary Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-circle svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Secondary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Secondary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Secondary Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-circle svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Secondary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Secondary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded btn-raised svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Button Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-small svelte-1rfnt3r"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ButtonGroups Button Group 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-gxfxop"
    role="group"
  >
    <button
      class="btn svelte-1rfnt3r"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn svelte-1rfnt3r"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn svelte-1rfnt3r"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-gxfxop"
    role="group"
  >
    <button
      class="btn btn-primary svelte-1rfnt3r"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-primary svelte-1rfnt3r"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-primary svelte-1rfnt3r"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-gxfxop"
    role="group"
  >
    <button
      class="btn btn-secondary svelte-1rfnt3r"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-secondary svelte-1rfnt3r"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-secondary svelte-1rfnt3r"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    style="margin-bottom: 40px;"
  />
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-gxfxop"
    role="group"
  >
    <button
      class="btn btn-primary btn-bordered svelte-1rfnt3r"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-primary btn-bordered svelte-1rfnt3r"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-primary btn-bordered svelte-1rfnt3r"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-gxfxop"
    role="group"
  >
    <button
      class="btn btn-secondary btn-bordered svelte-1rfnt3r"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-secondary btn-bordered svelte-1rfnt3r"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-secondary btn-bordered svelte-1rfnt3r"
      type="button"
    >
      Three
    </button>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ButtonIcons Button Icons 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style="display: inline-flex;"
  >
    <button
      class="btn btn-primary btn-rounded svelte-1rfnt3r"
      type="button"
    >
      Download
    
      <svg
        aria-hidden="true"
        class="btn-icon-right svelte-139qr6r"
        data-custom-icon="true"
        fill="currentColor"
        focusable="false"
        height="14px"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Download icon graphic
        </desc>
        <path
          d="M14 11v2h-12v-2h-2v4h16v-4zM12 6h-3v-5h-2v5h-3l4 6z"
        />
      </svg>
    </button>
     
    <button
      class="btn btn-primary btn-rounded svelte-1rfnt3r"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="btn-icon-left svelte-139qr6r"
        data-custom-icon="true"
        fill="currentColor"
        focusable="false"
        height="14px"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Phone icon graphic
        </desc>
        <path
          d="M11 10c-1 1-1 2-2 2s-2-1-3-2-2-2-2-3 1-1 2-2-2-4-3-4-3 3-3 3c0 2 2.055 6.055 4 8s6 4 8 4c0 0 3-2 3-3s-3-4-4-3z"
        />
      </svg>
      
    Call
    </button>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Cards Card 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="card svelte-1wdh6c5"
  >
    <div
      class="custom-wrap svelte-o6i4ru"
      style="flex: 1;"
    >
      <h1>
        Default Card
      </h1>
    </div>
     
    <div
      class="custom-wrap svelte-o6i4ru"
      style="flex: 2;"
    >
      <p>
        This card comes with some
      
        <span
          class="quoted"
        >
          skinning css
        </span>
        
      included. Also, it's a flex container with direction of
      
        <i>
          row
        </i>
        
      , so each child with a
      
        <i>
          flex
        </i>
        
      rule with get placed as a sort of column in the row (until the viewport is
      shrunk below a certain breakpoint and then it will stack).
      </p>
    </div>
  </div>
   
  <div
    class="card card-animated card-stacked svelte-1wdh6c5"
  >
    <div
      class="custom-wrap svelte-o6i4ru"
    >
      <h1
        style="flex: 1; display: flex; justify-content: center;"
      >
        Animated & Stacked Card
      </h1>
       
      <div
        style="flex 1;"
      >
        <p>
          This card comes with some
        
          <span
            class="quoted"
          >
            skinning css
          </span>
          
        included. Also, it's a flex container with direction of
        
          <i>
            column
          </i>
          
        , so each child with a
        
          <i>
            flex
          </i>
          
        rule with get placed as a sort of row in the stack.
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="card-base svelte-1wdh6c5"
  >
    <div
      class="custom-card custom-wrap svelte-o6i4ru"
    >
      <h1>
        Card With No Skinning
      </h1>
       
      <p>
        This card omits any
      
        <span
          class="quoted"
        >
          skinning css
        </span>
        
      but includes the base or core CSS. So, we can style it without the need to
      resort to css custom theming at all -- we simply define our own customized
      styles. It does come with some base styles but hopefully not too
      opinionated for your use case.
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Checkbox Hide Fieldset 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group checkbox-group-hidden svelte-1sayam0"
  >
    <legend
      class="checkbox-legend screenreader-only svelte-1sayam0"
    >
      Checkbox fieldset hidden
    </legend>
     
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Checkbox Inline 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox inline
    </legend>
     
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Checkbox Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group checkbox-group-large svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox large
    </legend>
     
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-large svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label checkbox-label-large svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-large svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label checkbox-label-large svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-large svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label checkbox-label-large svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Checkbox Prechecked Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group checkbox-group-large svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox prechecked items
    </legend>
     
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-large svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label checkbox-label-large svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-large svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label checkbox-label-large svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-large svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label checkbox-label-large svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Checkbox Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox large
    </legend>
     
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-small svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label checkbox-label-small svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-small svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label checkbox-label-small svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox checkbox-small svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label checkbox-label-small svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Checkbox Unskinned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class=" svelte-1sayam0"
  >
    <legend
      class="  svelte-1sayam0"
    >
      Checkbox unskinned (fieldset and legend unstyled)
    </legend>
     
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap checkbox-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Default Checkbox 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox legend
    </legend>
     
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox disabled
    </legend>
     
    <label
      class="checkbox-label-wrap svelte-1sayam0"
      disabled="true"
    >
      <input
        class="checkbox disabled svelte-1sayam0"
        disabled=""
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
      disabled="true"
    >
      <input
        class="checkbox disabled svelte-1sayam0"
        disabled=""
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
      disabled="true"
    >
      <input
        class="checkbox disabled svelte-1sayam0"
        disabled=""
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Option Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="checkbox-group svelte-1sayam0"
  >
    <legend
      class="checkbox-legend  svelte-1sayam0"
    >
      Checkbox disabled
    </legend>
     
    <label
      class="checkbox-label-wrap svelte-1sayam0"
    >
      <input
        class="checkbox svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="checkbox"
        value="daily"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
      disabled="true"
    >
      <input
        class="checkbox svelte-1sayam0"
        disabled=""
        id="choice-frequency-1"
        name="frequency"
        type="checkbox"
        value="weekly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="checkbox-label-wrap svelte-1sayam0"
      disabled="true"
    >
      <input
        class="checkbox svelte-1sayam0"
        disabled=""
        id="choice-frequency-2"
        name="frequency"
        type="checkbox"
        value="monthly"
      />
       
      <span
        class="checkbox-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio legend
    </legend>
     
    <label
      class="radio-label-wrap svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio All Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group radio-group-large svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio large
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
      disabled="true"
    >
      <input
        class="radio radio-large disabled svelte-1sayam0"
        disabled=""
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
      disabled="true"
    >
      <input
        class="radio radio-large disabled svelte-1sayam0"
        disabled=""
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
      disabled="true"
    >
      <input
        class="radio radio-large disabled svelte-1sayam0"
        disabled=""
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Disabled Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group radio-group-large svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio large
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
      disabled="true"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        disabled=""
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
      disabled="true"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        disabled=""
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Hide Fieldset 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group radio-group-hidden svelte-1sayam0"
  >
    <legend
      class="radio-legend screenreader-only svelte-1sayam0"
    >
      Radio fieldset hidden
    </legend>
     
    <label
      class="radio-label-wrap svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Inline 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio inline
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group radio-group-large svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio large
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Prechecked Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group radio-group-large svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio large
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-large svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label radio-label-large svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class="radio-group svelte-1sayam0"
  >
    <legend
      class="radio-legend  svelte-1sayam0"
    >
      Radio small
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-small svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label radio-label-small svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-small svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label radio-label-small svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio radio-small svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label radio-label-small svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/ChoiceInput Radio Unskinned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <fieldset
    class=" svelte-1sayam0"
  >
    <legend
      class="  svelte-1sayam0"
    >
      Radio unskinned (fieldset and legend unstyled)
    </legend>
     
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-0"
        name="frequency"
        type="radio"
        value="daily"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Daily
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-1"
        name="frequency"
        type="radio"
        value="weekly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Weekly
      </span>
       
    </label>
    <label
      class="radio-label-wrap radio-label-wrap-inline svelte-1sayam0"
    >
      <input
        class="radio svelte-1sayam0"
        id="choice-frequency-2"
        name="frequency"
        type="radio"
        value="monthly"
      />
       
      <span
        class="radio-label svelte-1sayam0"
      >
        Monthly
      </span>
       
    </label>
  </fieldset>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Header Header Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="header header-sticky svelte-1vemaho"
  >
    <div
      class="header-content svelte-1vemaho"
    >
      <div
        class="svelte-1addpwm"
        slot="logoleft"
      >
        logo left
      </div>
       
      <nav>
        <ul
          class="header-nav nav-overrides svelte-acwymg"
        >
          <li
            class="header-nav-item svelte-1iu85at"
          >
            <a
              class="svelte-1addpwm"
              href="#home"
            >
              Home
            </a>
          </li>
           
          <li
            class="header-nav-item svelte-1iu85at"
          >
            <a
              class="svelte-1addpwm"
              href="#products"
            >
              Products
            </a>
          </li>
           
          <li
            class="header-nav-item svelte-1iu85at"
          >
            <a
              class="svelte-1addpwm"
              href="#services"
            >
              Services
            </a>
          </li>
           
          <li
            class="header-nav-item svelte-1iu85at"
          >
            <a
              class="svelte-1addpwm"
              href="#about"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
       
      <div
        class="svelte-1addpwm"
        slot="logoright"
      >
        logo right
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid1"
    >
      Default input
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid1"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid8"
    >
      Disabled input
    </label>
     
    <input
      class="input disabled svelte-1r99kjn"
      disabled=""
      id="myid8"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Email 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid19"
    >
      Email
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid19"
      type="email"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Help Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid9"
    >
      Help text
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid9"
      type="text"
    />
     
    <span
      class="field-help svelte-1r99kjn"
    >
      Some useful help text.
    </span>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Help Text Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-large svelte-1r99kjn"
      for="myid11"
    >
      Help text large
    </label>
     
    <input
      class="input input-large svelte-1r99kjn"
      id="myid11"
      type="text"
    />
     
    <span
      class="field-help-large svelte-1r99kjn"
    >
      Some useful help text.
    </span>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Help Text Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-small svelte-1r99kjn"
      for="myid10"
    >
      Help text small
    </label>
     
    <input
      class="input input-small svelte-1r99kjn"
      id="myid10"
      type="text"
    />
     
    <span
      class="field-help-small svelte-1r99kjn"
    >
      Some useful help text.
    </span>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Inline Input 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-inline svelte-1r99kjn"
      for="myid2"
    >
      Inline input
    </label>
     
    <input
      class="input input-inline svelte-1r99kjn"
      id="myid2"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Invalid Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-error svelte-1r99kjn"
      for="myid12"
    >
      Invalid text
    </label>
     
    <input
      class="input input-error svelte-1r99kjn"
      id="myid12"
      type="text"
    />
     
    <span
      aria-live="polite"
      class="field-error svelte-1r99kjn"
      role="status"
    >
      This field has errors.
    </span>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Invalid Text Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-error label-large svelte-1r99kjn"
      for="myid13"
    >
      Invalid text large
    </label>
     
    <input
      class="input input-error input-large svelte-1r99kjn"
      id="myid13"
      type="text"
    />
     
    <span
      aria-live="polite"
      class="field-error-large svelte-1r99kjn"
      role="status"
    >
      This field has errors.
    </span>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Invalid Text Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-error label-small svelte-1r99kjn"
      for="myid14"
    >
      Invalid text small
    </label>
     
    <input
      class="input input-error input-small svelte-1r99kjn"
      id="myid14"
      type="text"
    />
     
    <span
      aria-live="polite"
      class="field-error-small svelte-1r99kjn"
      role="status"
    >
      This field has errors.
    </span>
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-large svelte-1r99kjn"
      for="myid6"
    >
      Large input
    </label>
     
    <input
      class="input input-large svelte-1r99kjn"
      id="myid6"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Number 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid18"
    >
      Number
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid18"
      type="number"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Password 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid20"
    >
      Password
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid20"
      type="password"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid3"
    >
      Rounded input
    </label>
     
    <input
      class="input input-rounded svelte-1r99kjn"
      id="myid3"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Search 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid15"
    >
      Search
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid15"
      type="search"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-small svelte-1r99kjn"
      for="myid7"
    >
      Small input
    </label>
     
    <input
      class="input input-small svelte-1r99kjn"
      id="myid7"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Telephone 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid16"
    >
      Telephone
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid16"
      type="tel"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Textarea 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid21"
    >
      Textarea
    </label>
     
    <textarea
      class="input svelte-1r99kjn"
      id="myid21"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Textarea Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-large svelte-1r99kjn"
      for="myid23"
    >
      Textarea large
    </label>
     
    <textarea
      class="input input-large svelte-1r99kjn"
      cols="5"
      id="myid23"
      rows="10"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Textarea Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-small svelte-1r99kjn"
      for="myid22"
    >
      Textarea small
    </label>
     
    <textarea
      class="input input-small svelte-1r99kjn"
      cols="5"
      id="myid22"
      rows="10"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input URL 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid17"
    >
      URL
    </label>
     
    <input
      class="input svelte-1r99kjn"
      id="myid17"
      type="url"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Underlined 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid4"
    >
      Underlined input
    </label>
     
    <input
      class="input input-underlined svelte-1r99kjn"
      id="myid4"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Input Underlined With Background 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid5"
    >
      Underlined with background input
    </label>
     
    <input
      class="input input-underlined input-underlined-bg svelte-1r99kjn"
      id="myid5"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/InputAddons Input Addons Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-1r99kjn"
      for="myid"
    >
      Input with addons
    </label>
     
    <div
      class="input-addon-container svelte-1r99kjn"
    >
      <div
        slot="addonLeft"
      >
        <div
          class="input-addon-left svelte-1cwsp3m"
        >
          <span>
            L
          </span>
        </div>
      </div>
       
      <input
        class="input input-has-left-addon input-has-right-addon svelte-1r99kjn"
        id="myid"
        type="text"
      />
       
      <div
        slot="addonRight"
      >
        <div
          class="input-addon-right svelte-1cwsp3m"
        >
          <span>
            R
          </span>
        </div>
      </div>
    </div>
     
  </div>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Progress Progress CSS 1`] = `
<section
  class="storybook-snapshot-container"
>
  <progress
    class="progress foo-bar-baz svelte-1k1dabm"
    max="100"
    value="30"
  />
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Progress Progress Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <progress
    class="progress svelte-1k1dabm"
    max="100"
    value="30"
  />
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Action 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="99"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch action
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="99"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-action svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Border 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="6"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch border
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="6"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-border svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Border Action 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="7"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch border action
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="7"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-border switch-action svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="2"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch default
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="2"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container disabled svelte-4jnsth"
    for="5"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch disabled
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      disabled=""
      id="5"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Label Right 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container switch-right svelte-4jnsth"
    for="8"
  >
     
    <input
      class="switch-input svelte-4jnsth"
      id="8"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch svelte-4jnsth"
    />
     
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch with label on right
    </span>
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Label Right Action 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container switch-right svelte-4jnsth"
    for="10"
  >
     
    <input
      class="switch-input svelte-4jnsth"
      id="10"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-action svelte-4jnsth"
    />
     
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch with label on right action
    </span>
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Label Right Action Border 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container switch-right svelte-4jnsth"
    for="11"
  >
     
    <input
      class="switch-input svelte-4jnsth"
      id="11"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-border switch-action svelte-4jnsth"
    />
     
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch with label on right action
    </span>
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Label Right Action Border Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container switch-right disabled svelte-4jnsth"
    for="12"
  >
     
    <input
      class="switch-input svelte-4jnsth"
      disabled=""
      id="12"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-border switch-action svelte-4jnsth"
    />
     
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch with label on right action
    </span>
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Label Right Border 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container switch-right svelte-4jnsth"
    for="9"
  >
     
    <input
      class="switch-input svelte-4jnsth"
      id="9"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-border svelte-4jnsth"
    />
     
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch with label on right and border
    </span>
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="3"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch large label
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="3"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-large svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Prechecked 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="4"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch prechecked
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="4"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-large svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Switch Switch Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    class="switch-container svelte-4jnsth"
    for="1"
  >
    <span
      class="switch-label svelte-4jnsth"
    >
      Switch small label
    </span>
     
    <input
      class="switch-input svelte-4jnsth"
      id="1"
      role="switch"
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="switch switch-small svelte-4jnsth"
    />
     
  </label>
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Tabs Custom Tab Buttons 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Tabs"
    class="tab-list tab-borderless svelte-f72hrp"
    role="tablist"
  >
    <div
      class="buttonWrap active svelte-19n9due"
    >
      <button
        aria-selected="true"
        class="btn btn-bordered svelte-1rfnt3r"
        role="tab"
        type="button"
      >
        Tab 1
      </button>
    </div>
    
    
    <div
      class="buttonWrap  svelte-19n9due"
    >
      <button
        aria-selected="false"
        class="btn btn-bordered svelte-1rfnt3r"
        role="tab"
        type="button"
      >
        Tab 2
      </button>
    </div>
    
    
    <div
      class="buttonWrap  svelte-19n9due"
    >
      <button
        aria-selected="false"
        class="btn btn-bordered svelte-1rfnt3r"
        role="tab"
        type="button"
      >
        Tab 3
      </button>
    </div>
    
    
  </div>
   
  <div
    class="pane svelte-f72hrp"
  >
    <h2>
      Tab Example 1
    </h2>
     
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam placeat
  recusandae est! Nesciunt consectetur, fuga voluptatem accusantium iste
  molestias aliquid!
    </p>
     
    <p>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
  deleniti natus temporibus eius quam. Id ullam quaerat itaque dicta rem,
  molestiae adipisci corrupti blanditiis sunt eveniet. Vero illo labore
  eligendi? Nobis molestiae facere maxime repudiandae nemo veritatis quae earum
  velit.
    </p>
     
  </div>
  
  
  
  
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Tabs Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Tabs"
    class="tab-list svelte-f72hrp"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="tab-item tab-button active svelte-f72hrp"
      role="tab"
    >
      Tab 1
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button svelte-f72hrp"
      role="tab"
    >
      Tab 2
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button svelte-f72hrp"
      role="tab"
    >
      Tab 3
       
    </button>
    
  </div>
   
  <div
    class="pane svelte-f72hrp"
  >
    <h2>
      Tab Example 1
    </h2>
     
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam placeat
  recusandae est! Nesciunt consectetur, fuga voluptatem accusantium iste
  molestias aliquid!
    </p>
     
    <p>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
  deleniti natus temporibus eius quam. Id ullam quaerat itaque dicta rem,
  molestiae adipisci corrupti blanditiis sunt eveniet. Vero illo labore
  eligendi? Nobis molestiae facere maxime repudiandae nemo veritatis quae earum
  velit.
    </p>
     
  </div>
  
  
  
  
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Tabs Tabs Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Tabs"
    class="tab-list svelte-f72hrp"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="tab-item tab-button active svelte-f72hrp"
      disabled=""
      role="tab"
    >
      Tab 1
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button svelte-f72hrp"
      disabled=""
      role="tab"
    >
      Tab 2
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button svelte-f72hrp"
      disabled=""
      role="tab"
    >
      Tab 3
       
    </button>
    
  </div>
   
  <div
    class="pane svelte-f72hrp"
  >
    <h2>
      Tab Example 1
    </h2>
     
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam placeat
  recusandae est! Nesciunt consectetur, fuga voluptatem accusantium iste
  molestias aliquid!
    </p>
     
    <p>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
  deleniti natus temporibus eius quam. Id ullam quaerat itaque dicta rem,
  molestiae adipisci corrupti blanditiis sunt eveniet. Vero illo labore
  eligendi? Nobis molestiae facere maxime repudiandae nemo veritatis quae earum
  velit.
    </p>
     
  </div>
  
  
  
  
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Tabs Tabs Disabled Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Tabs"
    class="tab-list svelte-f72hrp"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="tab-item tab-button active svelte-f72hrp"
      disabled=""
      role="tab"
    >
      Tab 1
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button svelte-f72hrp"
      role="tab"
    >
      Tab 2
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button svelte-f72hrp"
      disabled=""
      role="tab"
    >
      Tab 3
       
    </button>
    
  </div>
   
  <div
    class="pane svelte-f72hrp"
  >
    <h2>
      Tab Example 1
    </h2>
     
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam placeat
  recusandae est! Nesciunt consectetur, fuga voluptatem accusantium iste
  molestias aliquid!
    </p>
     
    <p>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
  deleniti natus temporibus eius quam. Id ullam quaerat itaque dicta rem,
  molestiae adipisci corrupti blanditiis sunt eveniet. Vero illo labore
  eligendi? Nobis molestiae facere maxime repudiandae nemo veritatis quae earum
  velit.
    </p>
     
  </div>
  
  
  
  
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Tabs Tabs Jumbo 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Tabs"
    class="tab-list svelte-f72hrp"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="tab-item tab-button active tab-button-jumbo svelte-f72hrp"
      role="tab"
    >
      Tab 1
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button tab-button-jumbo svelte-f72hrp"
      role="tab"
    >
      Tab 2
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button tab-button-jumbo svelte-f72hrp"
      role="tab"
    >
      Tab 3
       
    </button>
    
  </div>
   
  <div
    class="pane svelte-f72hrp"
  >
    <h2>
      Tab Example 1
    </h2>
     
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam placeat
  recusandae est! Nesciunt consectetur, fuga voluptatem accusantium iste
  molestias aliquid!
    </p>
     
    <p>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
  deleniti natus temporibus eius quam. Id ullam quaerat itaque dicta rem,
  molestiae adipisci corrupti blanditiis sunt eveniet. Vero illo labore
  eligendi? Nobis molestiae facere maxime repudiandae nemo veritatis quae earum
  velit.
    </p>
     
  </div>
  
  
  
  
</section>
`;

exports[`Storyshots AG—Svelte (Beta)/Tabs Tabs Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Tabs"
    class="tab-list svelte-f72hrp"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="tab-item tab-button active tab-button-large svelte-f72hrp"
      role="tab"
    >
      Tab 1
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button tab-button-large svelte-f72hrp"
      role="tab"
    >
      Tab 2
       
    </button>
    
    <button
      aria-selected="false"
      class="tab-item tab-button tab-button-large svelte-f72hrp"
      role="tab"
    >
      Tab 3
       
    </button>
    
  </div>
   
  <div
    class="pane svelte-f72hrp"
  >
    <h2>
      Tab Example 1
    </h2>
     
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam placeat
  recusandae est! Nesciunt consectetur, fuga voluptatem accusantium iste
  molestias aliquid!
    </p>
     
    <p>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
  deleniti natus temporibus eius quam. Id ullam quaerat itaque dicta rem,
  molestiae adipisci corrupti blanditiis sunt eveniet. Vero illo labore
  eligendi? Nobis molestiae facere maxime repudiandae nemo veritatis quae earum
  velit.
    </p>
     
  </div>
  
  
  
  
</section>
`;
